<resources>
    <string name="app_name">DJ Horn</string>
    <string name="select_sound">Choose sound！</string>
    <string name="dj_horn_sound">DJ Horn</string>
    <string name="sexy_sound">Sexy Voice</string>
    <string name="japanese_come_on_sound">Japanese Come on!</string>
    <string name="lets_party_sound">Let\'s party! </string>
    <string name="konfetti_licence" translatable="false">ISC License\n
        Copyright (c) 2017 Dion Segijn\n
Permission to use, copy, modify, and/or distribute this software for any
purpose with or without fee is hereby granted, provided that the above
copyright notice and this permission notice appear in all copies.\n
THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.</string>
</resources>